# aws-cloud-ai-web

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml
backend/: __init__.py  bedrock_client.py  handler.py  responses.py  validation.py
bootstrap/: github-frontend-deploy-iam.yaml
docs/: api.md  architecture.md  aws-resources.md  cost-review.md  demo-script.md  deployment.md  implementation-plan.md  interview-notes.md  lessons-learned.md  security-review.md  teardown.md  troubleshooting.md
docs/decisions/: 0001-use-python-for-backend.md  0002-use-uv-for-python-dependencies.md  0003-use-lambda-function-url-for-public-backend-endpoint.md  0004-use-aws-sam-for-infrastructure-as-code.md  0005-use-s3-for-static-frontend-hosting.md  0006-plan-to-use-amazon-bedrock-for-llm-provider.md  0007-use-mypy-for-static-type-checking.md  0008-use-eu-west-1-as-primary-aws-region.md  0009-defer-boto3-runtime-dependency-until-needed.md  0010-package-boto3-with-the-lambda-for-bedrock-converse-support.md  (+1 more)
events/: empty-question.json  invalid-json.json  valid-question.json  wrong-method.json
frontend/: app.js  config.example.js  config.js  index.html  styles.css
scripts/: check_backend_endpoint.py  check_frontend_website.py  sync_frontend.ps1
tests/: test_bedrock_client.py  test_deployment_config.py  test_foundation.py  test_frontend_shell.py  test_handler.py  test_responses.py  test_validation.py  test_workflow_config.py
